--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -196,7 +196,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build Docker image
-        uses: docker/buildx-action@v3
+        uses: docker/build-push-action@v3
         with:
           context: .
           file: ./docker/Dockerfile
