--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
 # requirements.txt
-# I don't have access to main.py. Paste main.py or its imports for exact deps.
-# Common packages (remove unused ones)
+# Pinned dependencies for CI stability
 
-flask>=2.3
-fastapi>=0.95
-uvicorn[standard]>=0.22
-requests>=2.31
-python-dotenv>=1.0
-numpy>=1.26
-pandas>=2.1
-aiohttp>=3.0
-sqlalchemy>=2.0
-psycopg2-binary>=2.9
-pytest>=7.4
-prometheus-client>=0.17
-celery>=5.3.0
-redis>=4.5.0
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+httpx==0.25.2
+pydantic==2.5.0
+sqlalchemy==2.0.23
+python-dotenv==1.0.0
+pytest==7.4.3
+pytest-asyncio==0.21.1
+pytest-cov==4.1.0
+requests==2.31.0
+aiohttp==3.9.1
+psycopg2-binary==2.9.9
+redis==4.6.0
+celery==5.3.4
+prometheus-client==0.19.0
