--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,7 +143,7 @@ jobs:
         run: isort --check-only --diff decoyable/ tests/ main.py
 
       - name: Run Flake8 linting
-        run: flake8 decoyable/ tests/ main.py --max-line-length=88 --extend-ignore=E203,W503
+        run: flake8 decoyable/ tests/ main.py --max-line-length=120 --extend-ignore=E203,W503
 
       - name: Run MyPy type checking
         run: mypy decoyable/ main.py --ignore-missing-imports
@@ -165,7 +165,7 @@ jobs:
           pip install bandit safety pip-audit
 
       - name: Run Bandit security linting
-        run: bandit -r decoyable/ -f json -o bandit-report.json || true
+        run: bandit -r decoyable/ -f json -o bandit-report.json --exclude "*/test*,*/tests/*" || true
 
       - name: Run Bandit on defense modules (strict)
         run: |
