--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,14 +15,14 @@ repos:
     rev: 24.1.0
     hooks:
       - id: black
-        args: ["--line-length=88"]
+        args: ["--line-length=120"]
         language_version: python3.10
 
   - repo: https://github.com/PyCQA/isort
     rev: 5.12.0
     hooks:
       - id: isort
-        args: ["--profile=black"]
+        args: ["--profile=black", "--line-length=120"]
         language_version: python3.10
 
   - repo: https://github.com/charliermarsh/ruff-pre-commit
@@ -36,7 +36,7 @@ repos:
     rev: 6.0.0
     hooks:
       - id: flake8
-        args: ["--max-line-length=88"]
+        args: ["--max-line-length=120"]
         language_version: python3.10
 
   - repo: https://github.com/pre-commit/mirrors-mypy
