Fix Docker Compose image conflicts: Give unique names to decoy services
- Rename decoy_ssh image to decoyable-decoy-ssh:latest
- Rename decoy_http image to decoyable-decoy-http:latest
- Prevent conflicts when multiple services build the same image name
- Docker Compose now builds and starts all services successfully

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -101,7 +101,7 @@ services:
     build:
       context: .
       dockerfile: docker/Dockerfile
-    image: decoyable-decoy:latest
+    image: decoyable-decoy-ssh:latest
     env_file: .env
     environment:
       - DECOY_PORTS=2222
@@ -132,7 +132,7 @@ services:
     build:
       context: .
       dockerfile: docker/Dockerfile
-    image: decoyable-decoy:latest
+    image: decoyable-decoy-http:latest
     env_file: .env
     environment:
       - DECOY_PORTS=8080,8443
