--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -2,6 +2,9 @@ server {
     listen 80;
     server_name localhost;
 
+    # DNS resolver for Docker networks
+    resolver 127.0.0.11 valid=30s;
+
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-XSS-Protection "1; mode=block" always;
@@ -18,7 +21,7 @@ server {
 
     # Proxy to FastAPI
     location / {
-        proxy_pass http://fastapi:8000;
+        proxy_pass http://172.20.0.2:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
