🗂️ Remove database files from version control
- Remove decoyable.db and decoyable_knowledge.db from git tracking
- Add database files to .gitignore (runtime data shouldn't be committed)
- Database files contain application runtime data and should not be versioned

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,13 @@ bower_components/
 vendor/
 dist/
 build/
+
+# Database files (runtime data)
+*.db
+*.sqlite
+*.sqlite3
+decoyable.db
+decoyable_knowledge.db
 out/
 target/
 *.class
