--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,4 @@ psycopg2-binary==2.9.9
 redis==4.6.0
 celery==5.3.4
 prometheus-client==0.19.0
+aiokafka==0.8.1  # Optional: for Kafka streaming support
