--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,3 +95,62 @@ jobs:
 
       - name: Test Docker import
         run: docker run --rm decoyable:test python -c "import decoyable; print('✓ Import successful')" || true
+
+  defense:
+    runs-on: ubuntu-latest
+    continue-on-error: true
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest-cov pytest-asyncio httpx bandit safety detect-secrets
+
+      - name: Run defense tests
+        run: python -m pytest tests/defense_tests.py -v --tb=short || true
+
+      - name: Run comprehensive security scan
+        run: |
+          echo "Running Bandit security scan..."
+          bandit -r decoyable/ --exclude "*/test*,*/tests/*" -f json -o bandit-report.json || true
+          echo "Running Safety dependency check..."
+          safety check --json > safety-report.json || true
+          echo "Running Detect-secrets scan..."
+          detect-secrets scan --all-files > detect-secrets-report.json || true
+
+      - name: Upload security reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: security-reports
+          path: |
+            bandit-report.json
+            safety-report.json
+            detect-secrets-report.json
+
+  pre-commit:
+    runs-on: ubuntu-latest
+    continue-on-error: true
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+
+      - name: Install pre-commit
+        run: |
+          python -m pip install --upgrade pip
+          pip install pre-commit
+
+      - name: Run pre-commit hooks
+        run: pre-commit run --all-files || true
