--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,32 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "decoyable"
-version = "0.1.0"
-description = "Enterprise-grade cybersecurity scanning tool for secrets, dependencies, and vulnerabilities"
+version = "1.0.0"
+description = "Next-Generation Active Cyber Defense Platform - Find secrets, vulnerabilities, and attack patterns in your code"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.11"
 license = { text = "MIT" }
 authors = [
     { name = "Kolerr Lab", email = "lab.kolerr@kolerr.com" }
+]
+maintainers = [
+    { name = "Kolerr Lab", email = "lab.kolerr@kolerr.com" }
+]
+keywords = ["security", "scanning", "vulnerabilities", "secrets", "SAST", "cybersecurity", "honeypot", "AI", "defense"]
+classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "Intended Audience :: Developers",
+    "Intended Audience :: Information Technology",
+    "Intended Audience :: System Administrators",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Security",
+    "Topic :: Software Development :: Quality Assurance",
+    "Topic :: System :: Monitoring",
+    "Topic :: System :: Networking :: Monitoring",
 ]
 dependencies = [
     "fastapi>=0.104.0",
@@ -38,10 +57,24 @@ dependencies = [
     "docker>=6.1.3",
     "celery>=5.3.0",
     "redis>=4.5.0",
+    "psutil>=5.9.0",
+    "aiokafka>=0.8.0",
+    "sqlalchemy>=2.0.0",
+    "alembic>=1.12.0",
+    "aiosqlite>=0.19.0",
+    "openai>=1.0.0",
+    "anthropic>=0.7.0",
+    "google-generativeai>=0.3.0"
 ]
+[project.urls]
+Homepage = "https://github.com/Kolerr-Lab/supper-decoyable"
+Documentation = "https://github.com/Kolerr-Lab/supper-decoyable/wiki"
+Repository = "https://github.com/Kolerr-Lab/supper-decoyable.git"
+Issues = "https://github.com/Kolerr-Lab/supper-decoyable/issues"
+Changelog = "https://github.com/Kolerr-Lab/supper-decoyable/blob/main/CHANGELOG.md"
 
 [project.scripts]
-decoyable = "decoyable.core.cli:main"
+decoyable = "main:main"
 
 [tool.black]
 line-length = 120
